--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 setuptools
-crewai==0.75
-crewai_tools==0.12.1
-streamlit==1.31.0
-setuptools==75.3.0
-numpy==1.25.0
-pandas==2.1.0
-PyYAML==6.0.2
-pydantic==1.10
+crewai
+crewai_tools
+streamlit
+setuptools
+numpy
+pandas
+PyYAML
+pydantic
 
